[gd_scene load_steps=6 format=3 uid="uid://crbk4sk6cwglb"]

[ext_resource type="Texture2D" uid="uid://81pi8p1oll5n" path="res://resources/images/control_name_bg.png" id="1_hkky6"]
[ext_resource type="Script" path="res://menus/options_menu.gd" id="1_ijqga"]
[ext_resource type="Texture2D" uid="uid://bbvhgw5yk2ur" path="res://resources/images/key_code_bg.png" id="2_lu51u"]
[ext_resource type="Texture2D" uid="uid://6futoikyrqm0" path="res://resources/images/key_code_bg_h.png" id="3_bu3aj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8oiuf"]
bg_color = Color(0, 0.0862745, 0.160784, 1)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ijqga")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -5
color = Color(0.192157, 0.227451, 0.317647, 1)
polygon = PackedVector2Array(0, 0, 1152, 0, 1152, 768, 0, 768)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Back To Menu"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 150

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 27
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_hkky6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer/TextureRect/MarginContainer"]
layout_mode = 2
text = "Skip conversation"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ConvoSkipButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_lu51u")
texture_hover = ExtResource("3_bu3aj")

[node name="ConvoSkipLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ConvoSkipButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 200

[node name="NewKeyPanel" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="NewKeyPanel"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8oiuf")

[node name="MarginContainer" type="MarginContainer" parent="NewKeyPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="Label" type="Label" parent="NewKeyPanel/Panel/MarginContainer"]
layout_mode = 2
text = "Press new key..."
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ConvoSkipButton" to="." method="_on_convo_skip_button_pressed"]
